# shyell

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  documentation.md
.github/workflows/: ci.yml  release.yml
src/: builtins.rs  completion.rs  executor.rs  main.rs  monitor.rs  parser.rs  state.rs
