[package]
name = "Vantage"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
rustyline = "17.0.2"
sysinfo = "0.38.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"

[dev-dependencies]
serial_test = "3.2.0"
